  expected number of results (or as much as possible)
- allow custom form element functions to customize zm_quick_edit fields
- dropped individual result list pagination settings in favour of a single
  setting 'defaultResultListPagination'; changed templates where appropriate
	to set individual pagination
- add ZMResultSource interface and ZMObjectResultSource (default)
  implementation
- add a (incomplete) interface ZMDatabase as a think database layer; this
  should make switching to another db package easier once all databse access
	is replaced with the new code; also, this will focrce completing the missing
	bits in the model classes as it uses object - array mappings and back
- moved zm_sql_patch(..) into ZMDbUtils::executePatch(..)
- remove obsolete ZMService
- remove deprecated zm_shipping_id(..)
- removed setting 'flagMaxColumns' - this should be coded in the template
- marked zm_setting, etc functions as deprecated, the new (and hopefully final)
  way is ZMSettings::get(), ZMSettings::set()
- cleaned up local.in.php
- removed the following settings: 'firstNameMinLength', 'lastNameMinLength',
  'phoneMinLength', 'addressMinLength', 'postcodeMinLength', 'cityMinLength',
	'stateMinLength', 'passwordMinLength'
- fix new products query
- remove 'isDisplayTimerStats', add zm_page_stats plugin

Release 0.9.0
- move cache manager page from core to zm_page_cache plugin
- added ZMShoppingCartItem::getProduct()
- make zm_catalog_tree support displaying products
- use create(..) rather than new to create new ResultList instances
- add custom result list for products to allow to replace with custom class;
  this will make the zm_split_page_result_list plugin a lot easier and allow
  to use the same code also in the admin area
- move admin zm_category_tree function into core/admin/html.php rather than
  sitting in a zen-cart folder; requires deleting the file manually
- properly populate a products status (changed to boolean)